--- a/html/styles/main.css
+++ b/html/styles/main.css
@@ -1,25 +1,26 @@
 body {
-	color: black;
 	margin: 0px;
     font-family: 'Open Sans';
 }
 
-#banner {
-	position: relative;
-	height: 600px;
+ #banner {
+    position: relative;
+    width: auto;
+    height: 600px;
+    background: green;
+    overflow: hidden;
 }
 
 #banner-img {
-	position: absolute;
+    position: absolute;
 
-	width: 100%;
-	height: inherit;
-
-  	-webkit-background-size: cover;
- 	 -moz-background-size: cover;
- 	 -o-background-size: cover;
- 	 background-size: cover;
-	background-attachment:scroll;
+    width: 100%; 
+    height: 100%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-attachment:scroll;
 }
 
 #banner-title{
@@ -27,32 +28,32 @@ body {
     justify-content:center;
     font-size: 50px;
     align-items:center;
-    
-	position: absolute;
-	top: 40%;
-	
-	width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 45%;
+
+    width: 100%;
     font-weight: 900;
-    
+    color: #fff;
+
 }
 
-//Colors
-.gray {
-	!color: #505050;
+#logo {
+    position: absolute;
+    margin: 30px;
+    left: 16%;
+    width: 120px;
 }
 
-.white {
-	color: #fff;
-}
 #main-content-title {
     font-size: 40px;
-    margin: 70px 20%;
+    margin: 80px 20%;
     color: #505050;
 }
 
 #main-content-text {
     font-size: 20px;
-    margin: 60px 16%;
+    margin: 40px 16%;
     color: #505050;
 }
 
@@ -60,9 +61,127 @@ body {
     text-align: center;
 }
 
+#footer {
+    height: 200px;
+    background: #505050;
+    color: #fff;
+    padding: 50px;
+}
+
+#button {
+    margin: 60px auto;
+    padding:15px;
+    background: #ff911b;
+    width: 300px;
+    font-size: 40px;
+    border-radius: 6px;
+}
+
+
+
+
+@media (max-width: 960px) {
+    #banner {
+        height: 400px;
+        overflow: hidden;
+    }
+
+    #banner-img {
+        position: absolute;
+
+        width: 100%; 
+        height: 100%;
+    }
+
+    #banner-title{
+        top: 45%;
+        font-size: 30px;
+    }
+    
+    #logo {
+        width: 60px;
+    }
+    
+    #main-content-title {
+        font-size: 18px;
+        margin: 40px 20%;
+    }
+
+    #main-content-text {
+        font-size: 12px;
+        margin: 20px 16%;
+    }
+}
+
+
+@media (max-width: 480px) {
+    #banner {
+        height: 200px;
+        overflow: hidden;
+    }
+
+    #banner-img {
+        position: absolute;
+
+        width: 100%; 
+        height: 100%;
+    }
+
+    #banner-title{
+        top: 45%;
+        font-size: 20px;
+    }
+    
+    #logo {
+        width: 45px;
+    }
+    
+    #main-content-title {
+        font-size: 18px;
+        margin: 40px 20%;
+    }
+
+    #main-content-text {
+        font-size: 12px;
+        margin: 20px 16%;
+    }
+}
+
+
+@media (max-width: 320px) {
+    #banner {
+        height: 150px;
+        overflow: hidden;
+    }
+
+    #banner-img {
+        position: absolute;
+
+        width: 100%; 
+        height: 100%;
+    }
+
+    #banner-title{
+        top: 45%;
+        font-size: 15px;
+    }
+    
+    #logo {
+        width: 30px;
+    }
+    
+    #main-content-title {
+        font-size: 18px;
+        margin: 40px 20%;
+    }
+
+    #main-content-text {
+        font-size: 12px;
+        margin: 20px 16%;
+    }
+}
+
 #logo-img {
-    position: absolute;
-    margin: 30px;
-    left: 16%;
-    width: 12%;
+    width: inherit;
+    height: auto;
 }
