--- a/html/styles/main.css
+++ b/html/styles/main.css
@@ -1,14 +1,17 @@
 body {
 	margin: 0px;
     font-family: 'Open Sans';
+    overflow-x: hidden;
 }
 
  #banner {
     position: relative;
     width: auto;
     height: 600px;
-    background: green;
+    background: #ff911b;
     overflow: hidden;
+    background-image: url(../graphics/banner.png);
+    background-size: cover;
 }
 
 #banner-img {
@@ -33,8 +36,9 @@ body {
     top: 45%;
 
     width: 100%;
-    font-weight: 900;
+    font-weight: 600;
     color: #fff;
+    
 
 }
 
@@ -47,18 +51,21 @@ body {
 
 #main-content-title {
     font-size: 40px;
-    margin: 80px 20%;
+    margin-top: 60px;
+    margin-bottom: 60px;
     color: #505050;
 }
 
 #main-content-text {
     font-size: 20px;
-    margin: 40px 16%;
+    margin-top: 30px;
+    margin-bottom: 30px;
     color: #505050;
 }
 
 #main-content {
     text-align: center;
+/*    background: pink;*/
 }
 
 #footer {
@@ -77,6 +84,10 @@ body {
     border-radius: 6px;
 }
 
+#phone-img {
+    width:20%; 
+    margin: 40px;
+}
 
 
 
@@ -103,13 +114,17 @@ body {
     }
     
     #main-content-title {
-        font-size: 18px;
+        font-size: 30px;
         margin: 40px 20%;
     }
 
     #main-content-text {
-        font-size: 12px;
+        font-size: 16px;
         margin: 20px 16%;
+    }
+    
+    #phone-img {
+        width:20%; 
     }
 }
 
@@ -137,7 +152,7 @@ body {
     }
     
     #main-content-title {
-        font-size: 18px;
+        font-size: 24px;
         margin: 40px 20%;
     }
 
@@ -145,12 +160,15 @@ body {
         font-size: 12px;
         margin: 20px 16%;
     }
+    
+    #phone-img {
+        width:40%; 
+    }
 }
 
 
 @media (max-width: 320px) {
     #banner {
-        height: 150px;
         overflow: hidden;
     }
 
@@ -179,7 +197,12 @@ body {
         font-size: 12px;
         margin: 20px 16%;
     }
+    
+    #phone-img {
+        width:60%; 
+    }
 }
+
 
 #logo-img {
     width: inherit;
